# robot_arm_ATC

./: .gitignore  .gitmodules
src/publisher/: package.xml  setup.py
src/publisher/publisher/: microros.py  pid_controller.py  pub.py
src/sabry/: CMakeLists.txt  package.xml
src/sabry/config/: joint_names_sabry.yaml
src/sabry/launch/: display.launch  display.launch.py  gazebo.launch.py  gazebo.launch.xml  gazebo_tool.launch.py
src/sabry/meshes/: base_link.STL  left_tool.STL  mid_tool.STL  mock_tool.STL  rack_link.STL  right_tool.STL  waist_Link.STL  wrist_pitch_Link.STL  wrist_yaw_Link.STL
src/sabry/urdf/: mock_tool.xacro  sabry.csv  sabry.urdf.xacro  sabry_controllers.xacro  sabry_gazebo.xacro  tools.xacro  tools_station.xacro
src/sabry/worlds/: tool_changer.sdf
src/sabry_controller/: CMakeLists.txt  package.xml
src/sabry_controller/config/: sabry_controllers.yaml
src/sabry_controller/launch/: bringup.launch.py  controller.launch.py
src/sabry_hardware/: CMakeLists.txt  package.xml
src/sabry_hardware/action/: ChangeTool.action
src/sabry_hardware/hardware/sketch_jan30a/: sketch_jan30a.ino
src/sabry_hardware/launch/: sabry_bringup.launch.xml
src/sabry_hardware/scripts/: add_two_ints_server.py  chat.py  linear_motor_node.py  operation.py  tool_change_manager.py
src/sabry_hardware/srv/: ChangeTool.srv  LinearMotor.srv
src/sabry_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/sabry_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  ros2_controllers.yaml  sabry.ros2_control.xacro  sabry.srdf  sabry.urdf.xacro
src/sabry_moveit/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/sabrydemo_moveit/: .setup_assistant  CMakeLists.txt  package.xml
src/sabrydemo_moveit/config/: joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml  sabry.ros2_control.xacro  sabry.srdf  sabry.urdf.xacro
src/sabrydemo_moveit/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/udemy_ros2_pkg/: CMakeLists.txt  package.xml
src/udemy_ros2_pkg/launch/: rpm_node.launch.py
src/udemy_ros2_pkg/scripts/: ok.py
