cmake_minimum_required(VERSION 3.8)
project(sabry_hardware)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()
find_package(ament_cmake_python REQUIRED)
find_package(ament_cmake REQUIRED)
find_package(rosidl_default_generators REQUIRED)
find_package(rclpy REQUIRED)


# ament_python_install_package(scripts)

rosidl_generate_interfaces(${PROJECT_NAME}
  "srv/LinearMotor.srv"
  "srv/ChangeTool.srv"
  "action/ChangeTool.action"
)
ament_python_install_package(scripts)
install(PROGRAMS
  scripts/linear_motor_node.py
  scripts/add_two_ints_server.py
  scripts/tool_change_manager.py
  scripts/chat.py
  scripts/operation.py
  DESTINATION lib/${PROJECT_NAME}
)

install(
  DIRECTORY launch 
  DESTINATION share/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()
ament_package()
